function(add_pdt_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE pdt)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_pdt_test(test_csv test_csv.cpp)
add_pdt_test(test_time test_time.cpp)
add_pdt_test(test_stats test_stats.cpp)
add_pdt_test(test_filter test_filter.cpp)
add_pdt_test(test_dataset test_dataset.cpp)

add_executable(test_cli_smoke test_cli_smoke.cpp)
target_link_libraries(test_cli_smoke PRIVATE pdt_cli_args)
add_test(NAME cli_smoke COMMAND test_cli_smoke)
