function(add_pdt_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE pdt)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_pdt_test(test_anomaly core/test_anomaly.cpp)
add_pdt_test(test_csv core/test_csv.cpp)
add_pdt_test(test_dataset core/test_dataset.cpp)
add_pdt_test(test_filter core/test_filter.cpp)
add_pdt_test(test_report core/test_report.cpp)
add_pdt_test(test_stats core/test_stats.cpp)
add_pdt_test(test_stats_by_sensor core/test_stats_by_sensor.cpp)
add_pdt_test(test_time core/test_time.cpp)

add_pdt_test(test_csv_export signal/test_csv_export.cpp)
add_pdt_test(test_dft signal/test_dft.cpp)
add_pdt_test(test_fft signal/test_fft.cpp)
add_pdt_test(test_peak_detection signal/test_peak_detection.cpp)
add_pdt_test(test_window signal/test_window.cpp)

add_executable(test_cli_smoke test_cli_smoke.cpp)
target_link_libraries(test_cli_smoke PRIVATE pdt_cli_args)
add_test(NAME cli_smoke COMMAND test_cli_smoke)

add_executable(test_spectrum_cli_smoke test_spectrum_cli_smoke.cpp)
target_link_libraries(test_spectrum_cli_smoke PRIVATE pdt_spectrum_cli_args)
add_test(NAME spectrum_cli_smoke COMMAND test_spectrum_cli_smoke)
