function(add_pdt_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE pdt)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_pdt_test(test_stats_by_sensor csv/test_stats_by_sensor.cpp)
add_pdt_test(test_anomaly_zscore csv/test_anomaly_zscore.cpp)
add_pdt_test(test_anomaly_iqr csv/test_anomaly_iqr.cpp)
add_pdt_test(test_anomaly_mad csv/test_anomaly_mad.cpp)
add_pdt_test(test_dataset csv/test_dataset.cpp)
add_pdt_test(test_filter csv/test_filter.cpp)
add_pdt_test(test_report csv/test_report.cpp)
add_pdt_test(test_stats csv/test_stats.cpp)
add_pdt_test(test_time csv/test_time.cpp)
add_pdt_test(test_csv csv/test_csv.cpp)

add_pdt_test(test_peak_detection wav/test_peak_detection.cpp)
add_pdt_test(test_csv_export wav/test_csv_export.cpp)
add_pdt_test(test_window wav/test_window.cpp)
add_pdt_test(test_dft wav/test_dft.cpp)
add_pdt_test(test_fft wav/test_fft.cpp)

add_executable(test_csv_cli_smoke test_csv_cli_smoke.cpp)
target_link_libraries(test_csv_cli_smoke PRIVATE pdt_csv_cli_args)
add_test(NAME csv_cli_smoke COMMAND test_csv_cli_smoke)

add_executable(test_wav_cli_smoke test_wav_cli_smoke.cpp)
target_link_libraries(test_wav_cli_smoke PRIVATE pdt_wav_cli_args)
add_test(NAME wav_cli_smoke COMMAND test_wav_cli_smoke)
